<resources>
    <string name="app_name">App_BaseDeDatos</string>
    <string name="txt_codigo">Codigo del producto</string>
    <string name="txt_descripcion">Descripción del producto</string>
    <string name="txt_precio">Precio del producto</string>
    <string name="btn_registrar">Registrar Producto</string>
    <string name="btn_buscar">Consultar Producto</string>
    <string name="btn_eliminar">Elminar Producto</string>
    <string name="btn_modificar">Modificar Producto</string>
</resources>
